--- a/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Concepto.xhtml
@@ -8,6 +8,8 @@
       xmlns:pe="http://primefaces.org/ui/extensions">
     <h:head>
         <script>
+            document.getElementById(id)
+            
             var scrollPosition;
 
             function saveScrollPosition() {
