19 de abril de 2016 Edwin Hastamorir Ajustes a los estilos css del toolbar y el growl

--- a/DesignerRHN/DesignerRHN-war/web/cuenta.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/cuenta.xhtml
@@ -11,7 +11,7 @@
             <ui:define name="body">                  
                 <h:form id="form">
                     <f:loadBundle basename="Recursos.cuenta" var="msg" />
-                    <p:panel  id="PanelTotal" header="#{msg['titulo']}" style="position: absolute; width: 874px; height: 530px; text-align: left;" >  
+                    <p:panel  id="PanelTotal" header="#{msg['titulo']}" style="position: absolute; width: 874px; height: 530px; text-align: left;" styleClass="panelTotal">  
                         <p:toolbar styleClass="cssToolbar">  
                             <p:toolbarGroup align="left"> 
                                 <p:commandButton id="guardarRapido" value="" actionListener="#{controlCuenta.guardadoGeneral()}" process="@this" styleClass="cssToobarButton"
